# my-uv-cookiecutter

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
